# AR_Application

./: CMakeLists.txt  CameraManager.cpp  CameraManager.h  CameraResourceManager.cpp  CameraResourceManager.h  Databaseworker.cpp  Databaseworker.h  GestureProcessor.cpp  GestureProcessor.h  Httpserver.cpp  Httpserver.h  MainWindow.cpp  MainWindow.h  NavigationDisplayWidget.cpp  NavigationDisplayWidget.h  ORBSLAM2Integration.h  PDFViewerPage.cpp  PDFViewerPage.h  README.md  Requesthandler.cpp  Requesthandler.h  TextRecognitionWidget.cpp  TextRecognitionWidget.h  ThreadPool.cpp  ThreadPool.h  Translate.cpp  Translate.h  VisionPage.cpp  VisionPage.h  gesture_classes.txt  gesture_recognizer.py  main.cpp  resources.qrc  test3.py
audio/: audio.pcm
